--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html>
 	<head>
-		<title>Page1</title>
+		<title>My Special Place</title>
 	</head>
-		<body>
-			<p>This is a test page for the pizzaboye</p>
-			<p>Hi Kevin!!!</p>
-		</body>
+	<body>
+		<h1>Welcome</h1>
+		<h2>to</h2>
+		<h3>my</h3>
+		<h4>index.html</h4>
+		<h5>page</h5>
+		<h6>index.html is your starting page always (also h6 is really fuckin small)</h6>
 
+		<br>
+		<h1>Paragraphs</h1>
+		<p>This is a paragraph</p>
+		<i><p>This is another paragraph</p></i>
+		<strong><p>By default, a paragraph's spacing between other paragraphs is 10pixels, which can be changed in CSS</p></strong>
+
+		<h1>Links</h1>
+		<a title="google website" href="http://google.com">Google Link</a>
+		<p>Use the TITLE Tag in the a tag to give the link hover text.</p>
+
+		<h1>Images</h1>
+		<p>Use the img tag to link images. Use the src attribute within the tag to link to the source image.</p>
+		<img src="http://lorempixel.com/400/200">
+
+
+
+	</body>
 </html>
