--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<h1>Images</h1>
 		<p>Use the img tag to link images. Use the src attribute within the tag to link to the source image.</p>
-		<img "smallpizza.jpg">
+		<img src="smallpizza.jpg">
 
 
 
